--- a/project 0/server/public/css/main.css
+++ b/project 0/server/public/css/main.css
@@ -41,12 +41,28 @@ font-size: 3rem;
 
 .wrong66{
 
-    background-color: rgb(255, 75, 75);
+    background-color: rgba(255, 75, 75);
 
 }
 
 .wrong33{
 
     background-color: rgb(255, 150, 150);
+
+}
+
+.card p{
+
+    max-height: 0;
+    max-width: 0;
+    margin: 0;
+    visibility: hidden;
+
+}
+
+img {
+
+    max-width: 100%;
+    max-height: 100%;
 
 }
