--- a/project 0/server/views/index.slim
+++ b/project 0/server/views/index.slim
@@ -6,20 +6,25 @@ html lang="en"
     title Dynamic/Server
     link href="css/main.css" rel="stylesheet" /
   body
-    h2
-      | click on:
-    #target
-    -for student in @students
-        .card id="#{student['id']}" onclick="is_correct(#{student['id']})" #{student['name']}
-    button#targetgetter onclick="get_target()"  get new target
-    button#resetbttn onclick="reset()"  reset
-    button#testbttn onclick="test()"  test
-    /h1 = @db #troubleshooting
-    /h1 = @students #troubleshooting
+    #Background
+      img src=""
+      #paddingtop
+      #content1
+        #target
+        h2#namnDisplay
+          | click on:
+      #content2
+        #gridright
+        #gridcontent1
+          #gridcontent
+            -for student in @students
+                  .card id="#{student['id']}" onclick="is_correct(#{student['id']})"
+          #gridcontent2
+            button#targetgetter onclick="get_target()"  get new target
+            button#resetbttn onclick="reset()"  reset
+            button#testbttn onclick="test()"  test
+        #gridright
+      /h1 = @db #troubleshooting
+      /h1 = @students #troubleshooting
 
-
-
-
-
-
-    script src="js/main.js" 
+  script src="js/main.js" 
