--- a/project 0/server/views/index.slim
+++ b/project 0/server/views/index.slim
@@ -10,31 +10,40 @@ html lang="en"
       | click on:
     #target
     -for student in @students
-        .card id="#{student['id']}" onclick="is_correct(#{student['id']})" 
+        - onclick_string = '{"id":"' + "#{student['id']}" + '","name":"' + "#{student['name']}"+ '"}'
+        .card id="#{student['id']}" onclick="is_correct(#{onclick_string})" 
             p #{student['name']}
-            img src="#{student['img_path']}" alt=""/
+            img src="#{student['img_path']}" alt=""
+        form action="/remove_student" method="post"
+            input type="hidden" name="id" value="#{student['id']}"
+            button type="submit" = "remove #{student['name']}"
+
     button#targetgetter onclick="get_target()"  get new target
     button#resetbttn onclick="reset()"  reset
-    button#testbttn onclick="test()"  test
+    / button#testbttn onclick="test()"  test JS
+    / form action="/test" method="post"
+    /     input type="file" name="image"
+    /     button type="submit" test ruby
 
-    form action="/add_student" method="post"
+    form action="/add_student" method="post" enctype="multipart/form-data"
                     
                     input type="text" name="name" value="name"
-                    input type="text" name="path" value="NYI"
+                    input type="file" name="image"
+                    / input type="text" name="path" value="NYI"
                     button type="submit" upload
 
-    h1 troublepewpew
-    table
-        -for student in @students 
-            thead
-                th
-                    td dood
-            tbody
-                tr
-                    td = "name: #{student['name']}"
-                tr
-                    td = "id: #{student['id']}"
-                tr
-                    td = "image path: #{student['img_path']}"
+    / h1 troublepewpew
+    / table
+    /     -for student in @students 
+    /         thead
+    /             th
+    /                 td dood
+    /         tbody
+    /             tr
+    /                 td = "name: #{student['name']}"
+    /             tr
+    /                 td = "id: #{student['id']}"
+    /             tr
+    /                 td = "image path: #{student['img_path']}"
 
     script src="js/main.js" 
