--- a/project 0/project 0,3/server/public/css/main.css
+++ b/project 0/project 0,3/server/public/css/main.css
@@ -2,6 +2,9 @@ body {
 
     background-color: whitesmoke;
 
+    height: 100vh;
+    width: 100vw;
+
     margin: 0;
 
 }
@@ -86,13 +89,6 @@ img{
         width: 100%;
         height: 30%;
         text-align: center;
-
-}
-
-#content2{
-
-    width: 100%;
-    height: 100%;
 
 }
 
